add withIndex() Stream mapping function